--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,9 @@ export(combine_data)
 export(download_pdfs)
 export(get_data)
 export(visual)
+export(clean_data)
+export(cleaner_data)
+export(all)
 import(dplyr)
 import(ggExtra)
 import(ggplot2)
