Data is clean, cleaning up visuals and working on documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,14 +5,14 @@ export(clean1)
 export(clean2)
 export(clean3)
 export(clean4)
-export(combine_data)
 export(findstrings)
-export(get_data)
 export(getpdfs)
 export(getyr)
+export(gradcount)
 export(initials)
 export(latin_honors)
 export(makestrings)
+export(namelength)
 export(pdf2txt)
 export(total_latin_honors)
 import(dplyr)
