r journal, dept_honors, pbk

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(clean1)
 export(clean2)
 export(clean3)
 export(clean4)
+export(dept_honors)
 export(findstrings)
 export(getpdfs)
 export(getyr)
@@ -13,10 +14,12 @@ export(initials)
 export(latin_honors)
 export(makestrings)
 export(namelength)
+export(pbk)
 export(pdf2txt)
 export(total_latin_honors)
 import(dplyr)
 import(gender)
+import(genderdata)
 import(ggExtra)
 import(ggplot2)
 import(stringr)
