--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,14 +7,14 @@ Author: person("Ben", "Czekanski", email = "bczekanski@gmail.com",
 Maintainer: Ben Czekanski <bmczekanski@gmail.com>
 License: CC0
 Description: This package cleans and examines data found in Williams College Course Catalogs about graduating seniors from 2000-2016.
+Depends: R (>= 2.11.0)
 LazyData: TRUE
 RoxygenNote: 5.0.1
-Imports: knitr,
+Suggests: knitr,
   rmarkdown,
   testthat,
   ggplot2,
   ggExtra,
-  dplyr,
   tidyr,
   stringr,
   gender
