--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,11 +10,13 @@ Description: This package cleans and examines data found in Williams College Cou
 Depends: R (>= 2.11.0)
 LazyData: TRUE
 RoxygenNote: 5.0.1
-Suggests: knitr,
+Imports: knitr,
   rmarkdown,
   testthat,
   ggplot2,
   ggExtra,
+  dplyr,
+  DBI,
   tidyr,
   stringr,
   gender
