--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ Description: This package cleans and examines data found in Williams College Cou
 Depends: R (>= 2.11.0)
 LazyData: TRUE
 RoxygenNote: 5.0.1
-Imports: knitr,
+Suggests: knitr,
   rmarkdown,
   testthat,
   ggplot2,
