--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ License: CC0
 Description: This package cleans and examines data found in Williams College Course Catalogs about graduating seniors from 2000-2016.
 LazyData: TRUE
 RoxygenNote: 5.0.1
-Depends:ggplot2,
+Imports:ggplot2,
   ggExtra (>= 0.6),
   dplyr (>= 0.5.0),
   tidyr,
