--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,9 +17,9 @@ export(namelength)
 export(pbk)
 export(pdf2txt)
 export(total_latin_honors)
-#import(dplyr)
-#import(gender)
-#import(ggExtra)
-#import(ggplot2)
-#import(stringr)
-#import(tidyr)
+import(dplyr)
+import(gender)
+import(ggExtra)
+import(ggplot2)
+import(stringr)
+import(tidyr)
