all subdependencies included

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,10 +9,44 @@ License: CC0
 Description: This package cleans and examines data found in Williams College Course Catalogs about graduating seniors from 2000-2016.
 LazyData: TRUE
 RoxygenNote: 5.0.1
-Imports:  dplyr,
-  ggplot2,
-  ggExtra,
-  tidyr,
-  stringr,
+Imports:  assertthat,
+  colorspace,
+  colourpicker,
+  curl,
+  digest,
+  DBI,
+  dichromat,
+  dplyr,
   gender
+  ggExtra,
+  ggplot2,
+  gtable,
+  htmltools,
+  htmlwidgets,
+  httpuv,
+  httr,
+  jsonlite,
+  labeling
+  lazyeval,
+  magrittr,
+  MASS,
+  mime,
+  miniUI,
+  munsell,
+  openssl,
+  plyr,
+  R6,
+  RColourBrewer,
+  Rcpp,
+  reshape2,
+  scales,
+  shiny,
+  shinyjs,
+  sourcetools,
+  stringi,
+  stringr,
+  tibble,
+  tidyr,
+  xtable,
+  yaml
 VignetteBuilder: knitr
