--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,7 @@ Imports:  assertthat,
   httpuv,
   httr,
   jsonlite,
-  labeling
+  labeling,
   lazyeval,
   magrittr,
   MASS,
@@ -36,7 +36,7 @@ Imports:  assertthat,
   openssl,
   plyr,
   R6,
-  RColourBrewer,
+  RColorBrewer,
   Rcpp,
   reshape2,
   scales,
