--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(getyr)
 export(gradcount)
 export(initials)
 export(latin_honors)
+export(latin_honors_gender)
 export(makestrings)
 export(namelength)
 export(pbk)
