--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ Description: This package cleans and examines data found in Williams College Cou
 LazyData: TRUE
 RoxygenNote: 5.0.1
 Depends: R (>= 2.10) 
-Imports:  assertthat,
+Imports: assertthat,
   colorspace,
   colourpicker,
   curl,
@@ -49,6 +49,7 @@ Imports:  assertthat,
   tidyr,
   xtable,
   yaml
-Suggests:  knitr,
-  testthat
+Suggests: knitr,
+  testthat,
+    rmarkdown
 VignetteBuilder: knitr
