documentation updated for get_pdfs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ export(clean3)
 export(clean4)
 export(dept_honors)
 export(findstrings)
-export(getpdfs)
+export(get_pdfs)
 export(getyr)
 export(gradcount)
 export(initials)
